// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayFileCard should render a ClayFileCard with actionItems 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
      <div class="flex-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
          <div class="dropdown-menu">
            <ul class="list-unstyled">
              <li>
                <a class=" dropdown-item" href="#1">Edit</a>
              </li>
              <li>
                <a class=" dropdown-item" href="#1">Save</a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with classes 1`] = `
<div class="card-type-asset card file-card my-custom-class">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-primary sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`danger color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-danger sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`dark color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-dark sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`info color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-info sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`light color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-light sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`primary color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-primary sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`secondary color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-secondary sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`success color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-success sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with file type style \`warning color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-warning sticker-bottom-left">DOC</span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with icon 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents">
        <use xlink:href="icons.svg#documents"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with id 1`] = `
<div class="card-type-asset card file-card" id="myId">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`danger color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-danger">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`info color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-info">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`secondary color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`success color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-success">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`warning color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-warning">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with one label 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with subtitle 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-subtitle text-truncate" title="Author Action">Author Action</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with two labels 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">Approved</span>
          <span class="label label-secondary">Pending</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with two labels with styles 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
        <div class="card-detail">
          <span class="label label-warning">Approved</span>
          <span class="label label-danger">Pending</span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with url 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <a class=" card-title text-truncate" href="#1">My Title</a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable ClayFileCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="My Title">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable ClayFileCard with input \`name\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="My Title">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable ClayFileCard with input \`value\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" value="checkbox" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="My Title">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable disabled ClayFileCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="My Title">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable selected ClayFileCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="flex-col flex-col-expand">
          <div class="card-title text-truncate" title="My Title">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render the default markup 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg aria-hidden="true" class="lexicon-icon lexicon-icon-documents-and-media">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="flex-col flex-col-expand">
        <div class="card-title text-truncate" title="My Title">My Title</div>
      </div>
    </div>
  </div>
</div>
`;
